# dj-agent

./: .gitignore  CLAUDE.md  KNOWN_LIMITATIONS.md  README.md  analyze_full.py  analyze_library.py  config.yaml  energy_references.json  memory.snapshot.json  pyproject.toml  test_flamingo_setup.py  vibe_analysis.py
.claude/skills/analytics/: SKILL.md
scripts/: README.md  backfill_audio_cues.py  batch_delete_cues.py  clean_slate_test.py  pssi_to_cues.py  regen_xml.py  run_sync.py  sync_preview.py
src/dj_agent/: __init__.py  __main__.py  analytics.py  audio.py  audio_gpu.py  batch.py  beatgrid.py  calibration.py  cleanup.py  config.py  cues.py  duplicates.py  energy.py  export.py  gpu.py  gui.py  harmonic.py  health.py  keydetect.py  mashups.py  master.py  memory.py  metadata.py  mood.py  normalize.py  phrases.py  pipeline.py  pitchshift.py  quality.py  reasoning.py  rekordbox.py  setbuilder.py  similarity.py  smartlists.py  stems.py  sync.py  tags.py  transitions.py  types.py  vocals.py
src/dj_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_analytics.py  test_beatgrid.py  test_calibration.py  test_cleanup.py  test_duplicates.py  test_energy.py  test_export.py  test_harmonic.py  test_keydetect.py  test_mashups.py  test_master.py  test_memory.py  test_metadata.py  test_mood.py  test_normalize.py  test_phrases.py  test_pitchshift.py  test_quality.py  test_reasoning.py  test_rekordbox.py  test_setbuilder.py  test_similarity.py  test_smartlists.py  test_sync.py  test_transitions.py  test_v2_fallbacks.py  test_vocals.py
(+26 files in other folders)
